<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_editor_absoluteY="0dp"
        app:layout_editor_absoluteX="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/white">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_title"
                android:textAlignment="center"
                android:padding="10dp"
                android:textSize="20dp"
                android:layout_marginBottom="15dp"></TextView>

            <Button
                android:id="@+id/button_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_order_title_1"
                android:textColor="@color/black"
                android:backgroundTint="#D7D7D7"
                android:textAllCaps="true"
                android:layout_marginVertical="40dp"
                app:cornerRadius="2dp"
                ></Button>
            <Button
                android:id="@+id/button_drink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_order_title_2"
                android:backgroundTint="#D7D7D7"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:layout_marginVertical="40dp"
                app:cornerRadius="2dp"></Button>
            <Button
                android:id="@+id/button_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_exit"
                android:backgroundTint="#D7D7D7"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:layout_marginVertical="40dp"
                app:cornerRadius="2dp"></Button>
            
            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_result"
                ></TextView>
        </LinearLayout>
    </androidx.drawerlayout.widget.DrawerLayout>

</androidx.constraintlayout.widget.ConstraintLayout>